spec/invalid/not_type_id.expr.interpreted
[
    (
        RuntimeError(
            TypeMismatch {
                expected: Bool,
                actual: Type<Fn(Value) -> Value>,
            },
        ),
        0..0,
    ),
]